--- a/gsi526.html
+++ b/gsi526.html
@@ -68,7 +68,7 @@
 			</nav>
 			<div class="page-title">
 				<img src="images/person_1.jpg" alt="Free HTML5 by FreeHTMl5.co">
-				<span>Disciplinas 1º Semestre de 2023 - Engenharia de Computação</span>
+				<span>Disciplinas 2º Semestre de 2023 - Engenharia de Computação</span>
 				<h2>Engenharia de Software I</h2>
 				<!--<span>Prof. Dr. Eduardo Cunha Campos</span>-->
 			</div>
@@ -88,43 +88,43 @@
 					<div>
 					<b>Avaliação:</b>
 					<ul>
-					<li>Prova 1 - 30 pts <b>(10/04)</b> <img src="images/new2.gif" alt="" height="11" width="28"> - <i> Aulas 01, 02, 03, 04 e 05</i></li>
-					<li>Prova 2 - 30 pts <b>(18/05)</b> <img src="images/new2.gif" alt="" height="11" width="28"> - <i> Aulas 06, 07, 08, 09 e 10</i></li>
-					<li>Prova 3 - 30 pts <b>(26/06)</b> <img src="images/new2.gif" alt="" height="11" width="28"> - <i> Aulas 11, 12, 13, 14, 15 e 16</i></li>
-					<li>Lista 1 - 2 pts <b>(10/04)</b> <!--<img src="images/deadline.png"" alt="" height="25" width="19">--></li>
-					<li>Lista 2 - 4 pts <b>(18/05)</b> <!--<img src="images/deadline.png"" alt="" height="25" width="19">--></li>
-					<li>Lista 3 - 4 pts <b>(26/06)</b> <!--<img src="images/new2.gif" alt="" height="11" width="28">--></li>
+					<li>Prova 1 - 30 pts <b>(04/09)</b> <img src="images/new2.gif" alt="" height="11" width="28"> - <i> Aulas 01, 02, 03, 04 e 05</i></li>
+					<li>Prova 2 - 30 pts <b>(23/10)</b> <img src="images/new2.gif" alt="" height="11" width="28"> - <i> Aulas 06, 07, 08, 09 e 10</i></li>
+					<li>Prova 3 - 30 pts <b>(04/12)</b> <img src="images/new2.gif" alt="" height="11" width="28"> - <i> Aulas 11, 12, 13, 14, 15 e 16</i></li>
+					<li>Lista 1 - 2 pts <b>(04/09)</b> <!--<img src="images/deadline.png"" alt="" height="25" width="19">--></li>
+					<li>Lista 2 - 4 pts <b>(23/10)</b> <!--<img src="images/deadline.png"" alt="" height="25" width="19">--></li>
+					<li>Lista 3 - 4 pts <b>(04/12)</b> <!--<img src="images/new2.gif" alt="" height="11" width="28">--></li>
 					</ul>
 					</div> 
 					<div>
 						<b>Material:</b>  
 						<ul> 
 						<li><i class="icon-book"></i><a href="aulas/gsi526/aula1-introducao.pptx"> Aula 01 - Requisitos de Software</a></button>  <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=BgoylssTeRs"> Ver Videoaula </a>)--></li>
-						<li><i class="icon-book"></i><a href="aulas/gsi526/aula2-processos.pptx"> Aula 02 - Processos de Software</a></button>  <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=D39AikmEIuI"> Ver Videoaula </a>)--></li>
-						<li><i class="icon-book"></i><a href="aulas/gsi526/aula3-scrum.pptx"> Aula 03 - O Método Ágil Scrum</a></button>  <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=g1FBFwAW_78"> Ver Videoaula </a>)--></li>
-						<li><i class="icon-book"></i><a href="aulas/gsi526/aula4-smells.pptx"> Aula 04 - Reengenharia, Refatoração e Bad Smells</a></button>  <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=cllmxcVXpzc"> Ver Videoaula </a>)--></li>
-						<li><i class="icon-book"></i><a href="aulas/gsi526/aula5-reuso.pptx"> Aula 05 - Reuso de Software</a></button> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=QnfHYobvDg8"> Ver Videoaula </a>)--></li>
-						<li><i class="icon-book"></i><a href="aulas/gsi526/aula6-arquitetura.pptx"> Aula 06 - Arquitetura de Software</a></button> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=KG7PtDgY9_I"> Ver Videoaula </a>)</li>
-						<li><i class="icon-book"></i><a href="aulas/gsi526/aula7-padroes-arquiteturais.pptx"> Aula 07 - Padrões Arquiteturais: Camadas, MVC e Microservices </a></button> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/Bw5CcmbzyWQ"> Ver Videoaula </a>)</li>
-						<li><i class="icon-book"></i><a href="aulas/gsi526/aula7-arquitetura-hexagonal-serverless.pptx"> Aula 07 - Padrões Arquiteturais: Hexagonal e Serverless</a></button> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=JxgaUJmWVQQ"> Ver Videoaula </a>)</li>
-						<li><i class="icon-book"></i><a href="aulas/gsi526/aula8-qualidade.pptx"> Aula 08 - Qualidade de Software</a></button> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/9irMtq4acNk"> Ver Videoaula </a>)--></li>
-						<li><i class="icon-book"></i><a href="aulas/gsi526/aula9-testes.pptx"> Aula 09 - Testes de Software</a></button> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/lxTZCuq6O9A"> Ver Videoaula </a>)--></li>
-						<li><i class="icon-book"></i><a href="aulas/gsi526/aula10-linha-de-produtos.pptx"> Aula 10 - Linha de Produtos de Software</a></button> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/rBCYVuu5zVc"> Ver Videoaula </a>)</li>
-						<li><i class="icon-book"></i><a href="aulas/gsi526/aula11-controle-versao.pptx"> Aula 11 - Sistemas de Controle de Versão</a></button> <!--<img src="images/new2.gif" alt="" height="11" width="28"><!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/NAilVqWY1cg"> Ver Videoaula </a>)--></li> 
-						<li><i class="icon-book"></i><a href="aulas/gsi526/aula12-idiomas-programacao.pptx"> Aula 12 - Idiomas de Programação</a></button> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/CRl9WpDKj0I"> Ver Videoaula </a>)--></li>
-						<li><i class="icon-book"></i><a href="aulas/gsi526/aula13-devops.pptx"> Aula 13 - DevOps</a></button> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/AovtkO8_sx4"> Ver Videoaula </a>)--></li>
-						<li><i class="icon-book"></i><a href="aulas/gsi526/aula14-principios-de-projeto.pptx"> Aula 14 - Princípios de Projeto</a></button> <!--<img src="images/new2.gif" alt="" height="11" width="28"><!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/2UbWM-DL5gg"> Ver Videoaula </a>)--></li>
-						<li><i class="icon-book"></i><a href="aulas/gsi526/aula15-padroes-de-projeto.pptx"> Aula 15 - Padrões de projeto</a></button> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/9wZnhCBdzbA"> Ver Videoaula </a>)--></li> 
-						<li><i class="icon-book"></i><a href="aulas/gsi526/aula16-padroes-de-projeto.pptx"> Aula 16 - Padrões de projeto</a></button> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/bzed6WnSnaY"> Ver Videoaula </a>)</li>
+						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/aula2-processos.pptx"> Aula 02 - Processos de Software</a></button>  <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=D39AikmEIuI"> Ver Videoaula </a>)--></li>
+						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/aula3-scrum.pptx"> Aula 03 - O Método Ágil Scrum</a></button>  <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=g1FBFwAW_78"> Ver Videoaula </a>)--></li>
+						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/aula4-smells.pptx"> Aula 04 - Reengenharia, Refatoração e Bad Smells</a></button>  <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=cllmxcVXpzc"> Ver Videoaula </a>)--></li>
+						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/aula5-reuso.pptx"> Aula 05 - Reuso de Software</a></button> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=QnfHYobvDg8"> Ver Videoaula </a>)--></li>
+						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/aula6-arquitetura.pptx"> Aula 06 - Arquitetura de Software</a></button> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=KG7PtDgY9_I"> Ver Videoaula </a>)--></li>
+						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/aula7-padroes-arquiteturais.pptx"> Aula 07 - Padrões Arquiteturais: Camadas, MVC e Microservices </a></button> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/Bw5CcmbzyWQ"> Ver Videoaula </a>)--></li>
+						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/aula7-arquitetura-hexagonal-serverless.pptx"> Aula 07 - Padrões Arquiteturais: Hexagonal e Serverless</a></button> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=JxgaUJmWVQQ"> Ver Videoaula </a>)--></li>
+						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/aula8-qualidade.pptx"> Aula 08 - Qualidade de Software</a></button> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/9irMtq4acNk"> Ver Videoaula </a>)--></li>
+						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/aula9-testes.pptx"> Aula 09 - Testes de Software</a></button> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/lxTZCuq6O9A"> Ver Videoaula </a>)--></li>
+						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/aula10-linha-de-produtos.pptx"> Aula 10 - Linha de Produtos de Software</a></button> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/rBCYVuu5zVc"> Ver Videoaula </a>)--></li>
+						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/aula11-controle-versao.pptx"> Aula 11 - Sistemas de Controle de Versão</a></button> <!--<img src="images/new2.gif" alt="" height="11" width="28"><!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/NAilVqWY1cg"> Ver Videoaula </a>)--></li> 
+						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/aula12-idiomas-programacao.pptx"> Aula 12 - Idiomas de Programação</a></button> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/CRl9WpDKj0I"> Ver Videoaula </a>)--></li>
+						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/aula13-devops.pptx"> Aula 13 - DevOps</a></button> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/AovtkO8_sx4"> Ver Videoaula </a>)--></li>
+						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/aula14-principios-de-projeto.pptx"> Aula 14 - Princípios de Projeto</a></button> <!--<img src="images/new2.gif" alt="" height="11" width="28"><!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/2UbWM-DL5gg"> Ver Videoaula </a>)--></li>
+						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/aula15-padroes-de-projeto.pptx"> Aula 15 - Padrões de projeto</a></button> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/9wZnhCBdzbA"> Ver Videoaula </a>)--></li> 
+						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/aula16-padroes-de-projeto.pptx"> Aula 16 - Padrões de projeto</a></button> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/bzed6WnSnaY"> Ver Videoaula </a>)--></li>
 						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 02 - Extreme Programming.pdf"> Aula 02 - Extreme Programming</a></button></li>
-						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 03 - Scrum.pdf"> Aula 03 - Scrum (+ Kanban e Lean)</a></button></li>
-						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 04 - Processo Unificado.pdf"> Aula 04 - O Processo Unificado</a></button></li>
-						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 05 - Outros Processos.pdf"> Aula 05 - Outros Processos</a></button></li>
-						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 06 - Smells.ppt"> Aula 06 - <i>Bad Smells</i> e Refatoração</a></button></li>	
-						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 07 - Reuso de Software.ppt"> Aula 07 - Reuso de <i>Software</i></a></button></li>	
-						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 08 - Técnicas de Reuso.ppt"> Aula 08 - Técnicas de Reuso de <i>Software</i></a></button></li>	
+						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 03 - Scrum.pdf"> Aula 03 - Scrum (+ Kanban e Lean)</a></button></li>
+						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 04 - Processo Unificado.pdf"> Aula 04 - O Processo Unificado</a></button></li>
+						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 05 - Outros Processos.pdf"> Aula 05 - Outros Processos</a></button></li>
+						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 06 - Smells.ppt"> Aula 06 - <i>Bad Smells</i> e Refatoração</a></button></li>	
+						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 07 - Reuso de Software.ppt"> Aula 07 - Reuso de <i>Software</i></a></button></li>	
+						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 08 - Técnicas de Reuso.ppt"> Aula 08 - Técnicas de Reuso de <i>Software</i></a></button></li>	
 						<!-- <li><i class="icon-book"></i><a href="aulas/gsi526/Aula 9 - Arquitetura de Software.pptx"> Aula 9 - Arquitetura de Software</a></button></li>
-						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula10 - Testes de Desenvolvimento.pdf"> Aula 10 - Testes de Desenvolvimento</a></button></li>
+						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/Aula10 - Testes de Desenvolvimento.pdf"> Aula 10 - Testes de Desenvolvimento</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula10 - Testes de Unidade.pdf"> Aula 10 - Testes de Unidade </a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula10 - Testes de Release.pdf"> Aula 10 - Testes de Release </a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula11 - Manutencao de Software.pdf"> Aula 11 - Manutenção de Software </a></button></li>
@@ -160,9 +160,9 @@
 					<div>
 					<b>Listas:</b> 
 					<ul>
-					<li><i class="icon-book"></i><a href="aulas/gsi526/lista1.pdf"> Lista 01 (Entrega: <b>10/04</b>)</a></button> <img src="images/deadline.png"" alt="" height="25" width="19"></li>
-					<li><i class="icon-book"></i><a href="aulas/gsi526/lista2.pdf"> Lista 02 (Entrega: <b>18/05</b>)</a></button> <img src="images/deadline.png"" alt="" height="25" width="19"></li> 
-					<li><i class="icon-book"></i><a href="aulas/gsi526/lista3.pdf"> Lista 03 (Entrega: <b>26/06</b>)</a></button> <img src="images/new2.gif" alt="" height="11" width="28"></li>
+					<li><i class="icon-book"></i><a href="aulas/gsi526/lista1.pdf"> Lista 01 (Entrega: <b>04/09</b>)</a></button> <img src="images/deadline.png"" alt="" height="25" width="19"></li>
+					<!--<li><i class="icon-book"></i><a href="aulas/gsi526/lista2.pdf"> Lista 02 (Entrega: <b>18/05</b>)</a></button> <img src="images/deadline.png"" alt="" height="25" width="19">--></li> 
+					<!--<li><i class="icon-book"></i><a href="aulas/gsi526/lista3.pdf"> Lista 03 (Entrega: <b>26/06</b>)</a></button> <img src="images/new2.gif" alt="" height="11" width="28">--></li>
 					<!--<li><i class="icon-book"></i><a href="aulas/gsi526/gabarito_lista_3.pdf"> <img src="images/new2.gif" alt="" height="11" width="28"> <b> Gabarito da Lista 3</b></a></button></li>
 					<li><i class="icon-book"></i><a href="https://www.tutorialspoint.com/junit/index.htm" target="_blank"> Tutorial sobre o framework JUnit</a></li>
 					<li><i class="icon-book"></i><a href="aulas/gsi526/seminário.pdf"> <b>Seminário</b></a></button></li>
