--- a/poo-lab.html
+++ b/poo-lab.html
@@ -68,7 +68,7 @@
 			</nav>
 			<div class="page-title">
 				<img src="images/person_1.jpg" alt="Free HTML5 by FreeHTMl5.co">
-				<span>Disciplinas 1º Semestre de 2023 - Engenharia Elétrica</span>
+				<span>Disciplinas 2º Semestre de 2023 - Engenharia Elétrica</span>
 				<h2>Programação de Computadores 2 Lab.</h2>
 				<!--<span>Prof. Dr. Eduardo Cunha Campos</span>-->
 			</div>
@@ -80,32 +80,33 @@
 					<div>
 					<b>Plano e Material extra:</b>
 					<ul>
-					<li><i class="icon-book"></i><a href="aulas/lab-poo/Plano Didático - PC2_LAB.pdf"> Plano Didático <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
+					<li><i class="icon-book"></i><a href="aulas/lab-poo/Plano Didático - PC2_LAB - T03.pdf"> Plano Didático - Turma 03 <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
+					<li><i class="icon-book"></i><a href="aulas/lab-poo/Plano Didático - PC2_LAB - T04.pdf"> Plano Didático - Turma 04 <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
 					<li><i class="icon-book"></i><a href="aulas/lab-poo/caelum_java.pdf"> Apostila Caelum Java <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
 					<li><i class="icon-book"></i><a href="http://www.decom.ufop.br/romildo/bcc221.2011-1/slides/cap14.pdf"> <i>Livro: Java Como Programar 8ª edição (Deitel)</i></a> <img src="images/new2.gif" alt="" height="11" width="28"></li>
 					</ul>
 					</div>
-					<div>
+					<!--<div>
 					<b>Monitoria e Grupos do Trabalho:</b>
 					<ul>
-					<li><i class="icon-book"></i><a href="aulas/lab-poo/monitoria_horario_pc2.pdf"> Horário de Monitoria</a> <img src="images/new2.gif" alt="" height="11" width="28"></li>				
-					<li><i class="icon-book"></i><a href="aulas/lab-poo/grupos_dos_trabalhos.pdf"> Relação dos Grupos <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
-					<li><i class="icon-book"></i><a href="aulas/lab-poo/Roteiro_Trabalho1.pdf"> Roteiro para Avaliação do Trabalho 1 <img src="images/deadline.png" alt="" height="25" width="19"></a></li>
-					<li><i class="icon-book"></i><a href="aulas/lab-poo/Roteiro_Trabalho2.pdf"> Roteiro para Avaliação do Trabalho 2 <img src="images/deadline.png" alt="" height="25" width="19"></a></li>
-					<li><i class="icon-book"></i><a href="aulas/lab-poo/Roteiro_Trabalho3.pdf"> Roteiro para Avaliação do Trabalho 3 <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
-					<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/monitoria_entrevistas.pdf"> Horário das Entrevistas</a> <img src="images/new2.gif" alt="" height="11" width="28"></li>
-					<li><i class="icon-book"></i><a href="aulas/lab-poo/monitoria_resultados.pdf"> Resultados de Monitoria</a> <img src="images/new2.gif" alt="" height="11" width="28"></li>				
-					<li><i class="icon-book"></i><a href="aulas/lab-poo/grupos_pc2_apresentacao.pdf"> Ordem de Apresentação dos Grupos <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
+					<li><i class="icon-book"></i><a href="aulas/lab-poo/monitoria_horario_pc2.pdf"> Horário de Monitoria</a> <img src="images/new2.gif" alt="" height="11" width="28">--></li>				
+					<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/grupos_dos_trabalhos.pdf"> Relação dos Grupos <img src="images/new2.gif" alt="" height="11" width="28"></a>--></li>
+					<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/Roteiro_Trabalho1.pdf"> Roteiro para Avaliação do Trabalho 1 <img src="images/deadline.png" alt="" height="25" width="19"></a>--></li>
+					<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/Roteiro_Trabalho2.pdf"> Roteiro para Avaliação do Trabalho 2 <img src="images/deadline.png" alt="" height="25" width="19"></a>--></li>
+					<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/Roteiro_Trabalho3.pdf"> Roteiro para Avaliação do Trabalho 3 <img src="images/new2.gif" alt="" height="11" width="28"></a>--></li>
+					<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/monitoria_entrevistas.pdf"> Horário das Entrevistas</a> <img src="images/new2.gif" alt="" height="11" width="28">--></li>
+					<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/monitoria_resultados.pdf"> Resultados de Monitoria</a> <img src="images/new2.gif" alt="" height="11" width="28">--></li>				
+					<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/grupos_pc2_apresentacao.pdf"> Ordem de Apresentação dos Grupos <img src="images/new2.gif" alt="" height="11" width="28"></a>--></li>
 					<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/grupos_notas.pdf"> Notas dos Grupos <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
-					</ul>-->
-					</div>					
+					</ul>
+					</div>-->				
 					<div>
 					<b>Avaliação:</b>
 					<ul>
-					<li>Trabalho 1 - 30 pts <b>(30/03)</b> <a href="aulas/lab-poo/Trabalho1-PC2.pdf"> - <i> Especificação </i> <img src="images/deadline.png" alt="" height="25" width="19"></a></li>
-					<li>Trabalho 2 - 30 pts <b>(18/05)</b> <a href="aulas/lab-poo/Trabalho2-PC2.pdf"> - <i> Especificação </i> <img src="images/deadline.png" alt="" height="25" width="19"></a></li>
-					<li>Trabalho 3 - 30 pts <b>(06/07)</b> <a href="aulas/lab-poo/Trabalho3-PC2.pdf"> - <i> Especificação </i> <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
-					<li>Exercícios Práticos - 10 pts <b>(29/06)</b> - Ex. 2, Ex. 3, Ex. 5 e Ex. 8<!--<a href="aulas/lab-poo/notas_exercicios.pdf"> - <i> Notas </i> <img src="images/new2.gif" alt="" height="11" width="28"></a>--></li>
+					<li>Trabalho 1 - 30 pts <!--<a href="aulas/lab-poo/Trabalho1-PC2.pdf"> - <i> Especificação </i> <img src="images/deadline.png" alt="" height="25" width="19"></a>--></li>
+					<li>Trabalho 2 - 30 pts <!--<a href="aulas/lab-poo/Trabalho2-PC2.pdf"> - <i> Especificação </i> <img src="images/deadline.png" alt="" height="25" width="19"></a>--></li>
+					<li>Trabalho 3 - 30 pts <!--<a href="aulas/lab-poo/Trabalho3-PC2.pdf"> - <i> Especificação </i> <img src="images/new2.gif" alt="" height="11" width="28"></a>--></li>
+					<li>Exercícios Práticos - 10 pts <!-- - Ex. 2, Ex. 3, Ex. 5 e Ex. 8<!--<a href="aulas/lab-poo/notas_exercicios.pdf"> - <i> Notas </i> <img src="images/new2.gif" alt="" height="11" width="28"></a>--></li>
 					<!--<li>Trabalho 1 - 30 pts <b>(Entrega: 18/02)</b> <a href="aulas/lab-poo/Trabalho1-PC2.pdf"> - <i> Especificação </i> <img src="images/deadline.png" alt="" height="25" width="19"></a></li> 
 					<li>Trabalho 2 - 30 pts <b>(Entrega: 18/03)</b> <a href="aulas/lab-poo/Trabalho2-PC2.pdf"> - <i> Especificação </i> <img src="images/new2.gif" alt="" height="11" width="28"></a></li> 
 					<li>Trabalho 3 - 30 pts <b>(Entrega: 08/04)</b> <a href="aulas/lab-poo/Trabalho3-PC2.pdf"> - <i> Especificação </i> <img src="images/new2.gif" alt="" height="11" width="28"></a></li> 
@@ -115,17 +116,17 @@
 					<div>					
 					<b>Material:</b> 
 					<ul>						
-					<li><i class="icon-book"></i><a href="aulas/lab-poo/Prática 1.pdf"> Exercício Prático 1</a> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/3s7G6f0yX2U"> Ver Videoaula </a>)</li>
-					<li><i class="icon-book"></i><a href="aulas/lab-poo/Pratica 2.pdf"> Exercício Prático 2</a> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/q0ggF0xgcqU"> Ver Videoaula </a>)</li>			
-					<li><i class="icon-book"></i><a href="aulas/lab-poo/Prática 3.pdf"> Exercício Prático 3</a> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/PY5hcxTVCCg"> Ver Videoaula </a>)</li>
-					<li><i class="icon-book"></i><a href="aulas/lab-poo/Prática 4.pdf"> Exercício Prático 4</a> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/gKJXrID8iEY"> Ver Videoaula </a>)</li>
-					<li><i class="icon-book"></i><a href="aulas/lab-poo/Prática 5.pdf"> Exercício Prático 5</a> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/sRFBjxgZXBs"> Ver Videoaula </a>)</li>
-					<li><i class="icon-book"></i><a href="aulas/lab-poo/Prática 6.pdf"> Exercício Prático 6a</a> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/UViaEASkcXQ"> Ver Videoaula </a>)</li>
-					<li><i class="icon-book"></i><a href="aulas/lab-poo/Prática 6.pdf"> Exercício Prático 6b</a> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/myKvJ2Mtgnw"> Ver Videoaula </a>)</li>
-					<li><i class="icon-book"></i><a href="aulas/lab-poo/Prática 7.pdf"> Exercício Prático 7a</a> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/94g9WaSeh7s"> Ver Videoaula </a>)</li>
-					<li><i class="icon-book"></i><a href="aulas/lab-poo/Prática 7.pdf"> Exercício Prático 7b</a> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/c4Oa0tHwTdE"> Ver Videoaula </a>)</li>
-					<li><i class="icon-book"></i><a href="aulas/lab-poo/Prática 8.pdf"> Exercício Prático 8a</a> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/Nc2W4q3h9E0"> Ver Videoaula </a>)</li>
-					<li><i class="icon-book"></i><a href="aulas/lab-poo/Prática 8.pdf"> Exercício Prático 8b</a> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/As_VeBHQLlo"> Ver Videoaula </a>)</li>
+					<li><i class="icon-book"></i><a href="aulas/lab-poo/Prática 1.pdf"> Exercício Prático 1</a> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/3s7G6f0yX2U"> Ver Videoaula </a>)--></li>
+					<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/Pratica 2.pdf"> Exercício Prático 2</a> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/q0ggF0xgcqU"> Ver Videoaula </a>)--></li>			
+					<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/Prática 3.pdf"> Exercício Prático 3</a> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/PY5hcxTVCCg"> Ver Videoaula </a>)--></li>
+					<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/Prática 4.pdf"> Exercício Prático 4</a> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/gKJXrID8iEY"> Ver Videoaula </a>)--></li>
+					<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/Prática 5.pdf"> Exercício Prático 5</a> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/sRFBjxgZXBs"> Ver Videoaula </a>)--></li>
+					<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/Prática 6.pdf"> Exercício Prático 6a</a> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/UViaEASkcXQ"> Ver Videoaula </a>)--></li>
+					<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/Prática 6.pdf"> Exercício Prático 6b</a> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/myKvJ2Mtgnw"> Ver Videoaula </a>)--></li>
+					<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/Prática 7.pdf"> Exercício Prático 7a</a> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/94g9WaSeh7s"> Ver Videoaula </a>)--></li>
+					<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/Prática 7.pdf"> Exercício Prático 7b</a> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/c4Oa0tHwTdE"> Ver Videoaula </a>)--></li>
+					<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/Prática 8.pdf"> Exercício Prático 8a</a> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/Nc2W4q3h9E0"> Ver Videoaula </a>)--></li>
+					<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/Prática 8.pdf"> Exercício Prático 8b</a> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/As_VeBHQLlo"> Ver Videoaula </a>)--></li>
 					</ul>
 					</div>
 					<!-- <div>
